kubernetes/security/foundation/network-policies/tenants/drova/redis-operator-egress.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: redis-drova-operator-egress
  namespace: drova
spec:
  endpointSelector:
    matchLabels:
      app: redis-drova
  egress:
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: redis-operator-system
            name: redis-operator
